--- a/index.html
+++ b/index.html
@@ -57,19 +57,20 @@ body {
 /* 🌳 Willow Tree */
 #willow {
     position: absolute;
-    top: 50%;
+    top: 48%;
     left: 50%;
     transform: translate(-50%, -50%);
-    font-size: 170px;
     cursor: pointer;
-    animation: glow 3s infinite;
+    filter: drop-shadow(0 0 25px rgba(120,200,160,0.7));
+    animation: willowGlow 4s ease-in-out infinite;
 }
 
-@keyframes glow {
-    0% { filter: drop-shadow(0 0 5px #a7d7c5); }
-    50% { filter: drop-shadow(0 0 20px #7fc4a5); }
-    100% { filter: drop-shadow(0 0 5px #a7d7c5); }
+@keyframes willowGlow {
+    0% { filter: drop-shadow(0 0 10px rgba(120,200,160,0.4)); }
+    50% { filter: drop-shadow(0 0 30px rgba(120,200,160,0.8)); }
+    100% { filter: drop-shadow(0 0 10px rgba(120,200,160,0.4)); }
 }
+
 
 /* 💌 Question Box */
 #messageBox {
@@ -152,7 +153,23 @@ button {
 </div>
 
 <!-- 🌳 Willow -->
-<div id="willow">🌳</div>
+<div id="willow">
+  <svg width="260" height="360" viewBox="0 0 260 360">
+    <!-- Trunk -->
+    <rect x="120" y="220" width="20" height="100" rx="8" fill="#6b4f3f"/>
+
+    <!-- Willow leaves -->
+    <path d="M40 80 C60 260, 100 300, 130 330" stroke="#6fae7b" stroke-width="10" fill="none"/>
+    <path d="M70 70 C90 260, 120 300, 150 330" stroke="#7bcf8e" stroke-width="12" fill="none"/>
+    <path d="M100 60 C120 260, 140 300, 170 330" stroke="#6fae7b" stroke-width="10" fill="none"/>
+    <path d="M130 60 C150 260, 170 300, 200 330" stroke="#7bcf8e" stroke-width="12" fill="none"/>
+    <path d="M160 70 C180 260, 200 300, 230 330" stroke="#6fae7b" stroke-width="10" fill="none"/>
+
+    <!-- Crown -->
+    <circle cx="130" cy="80" r="50" fill="#8fd19e"/>
+  </svg>
+</div>
+
 
 <!-- 💌 Question -->
 <div id="messageBox">
@@ -200,3 +217,4 @@ noBtn.addEventListener("mouseover", () => {
 
 </body>
 </html>
+
