--- a/index.html
+++ b/index.html
@@ -87,7 +87,9 @@ body {
     border-radius: 25px;
     text-align: center;
     box-shadow: 0 15px 40px rgba(0,0,0,0.2);
+    z-index: 10; /* 👈 ADD THIS */
 }
+
 
 h2 { color: #4c7a67; }
 
@@ -207,6 +209,7 @@ noBtn.addEventListener("mouseover", () => {
 
 </body>
 </html>
+
 
 
 
