--- a/index.html
+++ b/index.html
@@ -191,6 +191,7 @@ for (let i = 0; i < 40; i++) {
 /* Show message */
 document.getElementById("willow").onclick = () => {
     document.getElementById("messageBox").style.display = "block";
+    document.getElementById("willow").style.zIndex = "1";
 };
 
 /* Yes */
@@ -209,6 +210,7 @@ noBtn.addEventListener("mouseover", () => {
 
 </body>
 </html>
+
 
 
 
