--- a/index.html
+++ b/index.html
@@ -191,7 +191,7 @@ for (let i = 0; i < 40; i++) {
 /* Show message */
 document.getElementById("willow").onclick = () => {
     document.getElementById("messageBox").style.display = "block";
-    document.getElementById("willow").style.zIndex = "1";
+    document.getElementById("willow").style.display = "none";
 };
 
 /* Yes */
@@ -210,6 +210,7 @@ noBtn.addEventListener("mouseover", () => {
 
 </body>
 </html>
+
 
 
 
